objects/ChannelProgramLevel.object
<CustomObject>
    <fields>
        <fullName>DV_PAA__Benefits__c</fullName>
        <label>Benefits</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DV_PAA__Icon_URL__c</fullName>
        <inlineHelpText>Enter an image url to represent this Channel Program Level</inlineHelpText>
        <label>Icon URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DV_PAA__Minimum_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum Points</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DV_PAA__Next_Level_Point_Requirement__c</fullName>
        <formula>DV_PAA__Next_Level__r.DV_PAA__Minimum_Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Level Point Requirement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DV_PAA__Next_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Level</label>
        <referenceTo>ChannelProgramLevel</referenceTo>
        <relationshipLabel>Channel Program Levels</relationshipLabel>
        <relationshipName>Channel_Program_Levels</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_Channel_Program_Levels</fullName>
        <filterScope>Everything</filterScope>
        <label>All Channel Program Levels</label>
    </listViews>
    <listViews>
        <fullName>My_Channel_Program_Levels</fullName>
        <filterScope>Mine</filterScope>
        <label>My Channel Program Levels</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>